Added follow icons and linked style sheets and pulled images from database

--- a/src/CherryLABP.html
+++ b/src/CherryLABP.html
@@ -5,6 +5,7 @@
         <link rel="stylesheet" type="text/css" href="style.css">
         <script src="script.js"></script>
         <script src="jquery-3.5.1.min.js"></script>
+        <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Roboto:wght@100;300;500&family=Syne+Tactile&display=swap" rel="stylesheet">
     </head>
     <body>
                      <!-- The core Firebase JS SDK is always required and must be listed first -->
@@ -238,9 +239,9 @@
             <div id = "footer-left">
                 <p>Follow Us</p>
                 <div id = "follow-icons">
-                    <p></p>
-                    <p></p>
-                    <p></p>
+                    <img id="facebooklogo">
+                    <img id="twitterlogo">
+                    <img id="instagramlogo">
                 </div>
             </div>
             <div id = "footer-middle">
@@ -248,13 +249,13 @@
                 <p>DON'T MISS OUT ON THE NEXT DROP! SUBSCRIBE TO OUR NEWSLETTER</p>
                 <div id = "email-container">
                         <input type="email" id="email" name="email">
-                        <button type="sub-btn">Subscribe</button>
+                        <button id="sub-btn">Subscribe</button>
                 </div>
             </div>
             <div id = "footer-right">
-                <li>FAQs</li>
-                <li>Contact</li>
-                <li>About</li>
+                <li><a href = #>FAQs</a></li>
+                <li><a href = #>Contact</a></li>
+                <li><a href = #>About</a></li>
             </div>
         </footer>
     </body>
