--- a/src/SignUp.html
+++ b/src/SignUp.html
@@ -83,26 +83,24 @@
         <div id = "footer-left">
             <p>Follow Us</p>
             <div id = "follow-icons">
-                <p></p>
-                <p></p>
-                <p></p>
+                <img id="facebooklogo">
+                <img id="twitterlogo">
+                <img id="instagramlogo">
             </div>
         </div>
         <div id = "footer-middle">
             <p>DON'T MISS OUT ON THE NEXT DROP! SUBSCRIBE TO OUR NEWSLETTER</p>
             <div id = "email-container">
                     <input type="email" id="email" name="email">
-                    <button type="sub-btn">Subscribe</button>
+                    <button id="sub-btn">Subscribe</button>
             </div>
         </div>
         <div id = "footer-right">
-            <li>FAQs</li>
-            <li>Contact</li>
-            <li>About</li>
+            <li><a href="">FAQs</a></li>
+            <li><a href="">Contact</a></li>
+            <li><a href="">About</a></li>
         </div>
     </footer>
-    <script src="https://www.gstatic.com/firebasejs/8.0.1/firebase-app.js"></script>
-
-<script src="https://www.gstatic.com/firebasejs/8.0.1/firebase-analytics.js"></script>
+   
 </body>
 </html>
