--- a/src/Cart.html
+++ b/src/Cart.html
@@ -85,7 +85,7 @@
                 <h2 id="Total">TOTAL</h2>
                 <h2 id="Total">$ 138.07</h2>
                 <a href="#" id="Checkout">CHECKOUT</a> 
-                <!--Will eventually link to the checkout page-->
+                <!--Will eventually link to the checkout page or paypal API-->
             </li>
         </div>
         <hr>
@@ -93,30 +93,24 @@
             <div id = "footer-left">
                 <p>Follow Us</p>
                 <div id = "follow-icons">
-                    <p></p>
-                    <p></p>
-                    <p></p>
+                    <img id="facebooklogo">
+                    <img id="twitterlogo">
+                    <img id="instagramlogo">
                 </div>
             </div>
             <div id = "footer-middle">
                 <p>DON'T MISS OUT ON THE NEXT DROP! SUBSCRIBE TO OUR NEWSLETTER</p>
                 <div id = "email-container">
                         <input type="email" id="email" name="email">
-                        <button type="sub-btn">Subscribe</button>
+                        <button id="sub-btn">Subscribe</button>
                 </div>
             </div>
             <div id = "footer-right">
-                <li>FAQs</li>
-                <li>Contact</li>
-                <li>About</li>
+                <li><a href = #>FAQs</a></li>
+                <li><a href = #>Contact</a></li>
+                <li><a href = #>About</a></li>
             </div>
         </footer>
-        <!-- The core Firebase JS SDK is always required and must be listed first -->
-        <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-app.js"></script>
-
-        <!-- TODO: Add SDKs for Firebase products that you want to use
-     https://firebase.google.com/docs/web/setup#available-libraries -->
-        <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-analytics.js"></script>
 
     </body>
 
