--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,17 @@
         <title>Thread Core</title> <!--Home?-->
         <link rel="stylesheet" type="text/css" href="style.css">
         <script src="script.js"></script>
-
+        <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Roboto:wght@100;300;500&family=Syne+Tactile&display=swap" rel="stylesheet">
       </head>
       <body>
+          <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-app.js"></script>
+          <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-database.js"></script>
+          <!-- TODO: Add SDKs for Firebase products that you want to use
+            https://firebase.google.com/docs/web/setup#available-libraries -->
+          <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-analytics.js"></script>
+          <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-auth.js"></script>
+          <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-storage.js"></script>
+          <script src="databasescripts.js"></script>
         <nav>
             <div class="mobile-nav">
                 <div class="dropdown">
@@ -34,7 +42,7 @@
                 </div>
                 <div id = "logo">
                     <a href = "index.html">
-                        <img src="logo.jpg" alt="Thread Core">
+                        <img id="mylogo">
                     </a>
                 </div>
                 <div id = "nav-bar-right">
@@ -269,16 +277,16 @@
             <div id = "footer-left">
                 <p>Follow Us</p>
                 <div id = "follow-icons">
-                    <p></p>
-                    <p></p>
-                    <p></p>
+                    <img id="facebooklogo">
+                    <img id="twitterlogo">
+                    <img id="instagramlogo">
                 </div>
             </div>
             <div id = "footer-middle">
                 <p>DON'T MISS OUT ON THE NEXT DROP! SUBSCRIBE TO OUR NEWSLETTER</p>
                 <div id = "email-container">
                         <input type="email" id="email" name="email">
-                        <button type="button">Subscribe</button>
+                        <button id="sub-btn">Subscribe</button>
                 </div>
             </div>
             <div id = "footer-right">
@@ -294,24 +302,6 @@
      https://firebase.google.com/docs/web/setup#available-libraries -->
 <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-analytics.js"></script>
 
-<script>
-  // Your web app's Firebase configuration
-  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
-  var firebaseConfig = {
-    apiKey: "AIzaSyD8wJ0bFPY0Q9sQ2v4B2EXL_KWDwXZwNs0",
-    authDomain: "comp-224.firebaseapp.com",
-    databaseURL: "https://comp-224.firebaseio.com",
-    projectId: "comp-224",
-    storageBucket: "comp-224.appspot.com",
-    messagingSenderId: "344747179562",
-    appId: "1:344747179562:web:16d2b4aeb3917950ee0d53",
-    measurementId: "G-4R99TYPPK8"
-  };
-  // Initialize Firebase
-  firebase.initializeApp(firebaseConfig);
-  firebase.analytics();
-  console.log(firebase.database());
-</script>
 
     </body>
 </html>
