--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,6 @@
-<html><head>
+<!DOCTYPE html>
+<html>
+    <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
         <title>Thread Core</title> <!--Home?-->
         <link rel="stylesheet" type="text/css" href="style.css">
