users can log in

--- a/src/Cart.html
+++ b/src/Cart.html
@@ -52,7 +52,7 @@
             <br>
             <h1>MY CART</h1>
         </div>
-        <div id= "Content">
+        <div id= "cartContent">
             <li id= "Items">
                 <hr>
                 <a href=#>X</a>
