--- a/src/Brands.html
+++ b/src/Brands.html
@@ -41,7 +41,7 @@
                 <div id = "nav-bar-right">
                     <ul>
                         <li><a href=#>SEARCH</a></li>
-                        <li><button class="modalbtn" onclick="document.getElementById('id01').style.display='block'" >PROFILE</button></li> 
+                        <li><button class="modalbtn" id="profile" onclick="document.getElementById('id01').style.display='block'" >LOGIN</button></li> 
                             <div id="id01" class="modal">
                             
                                 <form class= "modal-content animate" action="/action_page.php">
@@ -50,18 +50,18 @@
 
                                         <h1 id="LogIn">LOGIN</h1>
                                         <label for="uname"><b>Email</b></label>
-                                        <input type="email" placeholder="Enter Email" name="uname" required>
+                                        <input type="email" placeholder="Enter Email" id="semail" name="uname" required>
 
                                         <label for="psw"><b>Password</b></label>
-                                        <input type="password" placeholder="Enter Password" name="psw" required>
+                                        <input type="password" placeholder="Enter Password" id="spassword" name="psw" required>
 
-                                        <button type="submit" class="loginbutton">Login</button>
+                                        <div class="loginbutton" id="loginbtn" onclick="signIn()">Login</div>
                                     </div>
 
                                     <div class="logincontainer" >
                                         <button type="button" onclick="document.getElementById('id01').style.display='none'" id="cancelbtn" class="loginbutton">Cancel</button>
                                         <span class="psw"><a href="#">Forgot Password?</a></span>
-                                        <span class="login"> Not a member? <a href="SignUp.html">Sign Up</a></span>
+                                        <span class="login"> Not a member? <a href="SignIn.html">Sign Up</a></span>
                                     </div>
                                 </form>
                             </div> 
