--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,14 @@
 
       </head>
       <body>
+        <!-- The core Firebase JS SDK is always required and must be listed first -->
+        <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-app.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-database.js"></script>
+        <!-- TODO: Add SDKs for Firebase products that you want to use
+        https://firebase.google.com/docs/web/setup#available-libraries -->
+        <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-analytics.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-auth.js"></script>
+        <script src="databasescripts.js"></script>
         <nav>
             <div class="mobile-nav">
                 <div class="dropdown">
@@ -40,7 +48,7 @@
                 <div id = "nav-bar-right">
                     <ul>
                         <li><a href=#>SEARCH</a></li>
-                        <li><button class="modalbtn" onclick="document.getElementById('id01').style.display='block'" >PROFILE</button></li> 
+                        <li><button class="modalbtn" id="profile" onclick="document.getElementById('id01').style.display='block'" >LOGIN</button></li> 
                             <div id="id01" class="modal">
                             
                                 <form class= "modal-content animate" action="/action_page.php">
@@ -49,18 +57,18 @@
 
                                         <h1 id="LogIn">LOGIN</h1>
                                         <label for="uname"><b>Email</b></label>
-                                        <input type="email" placeholder="Enter Email" name="uname" required>
+                                        <input type="email" placeholder="Enter Email" id="semail" name="uname" required>
 
                                         <label for="psw"><b>Password</b></label>
-                                        <input type="password" placeholder="Enter Password" name="psw" required>
+                                        <input type="password" placeholder="Enter Password" id="spassword" name="psw" required>
 
-                                        <button type="submit" class="loginbutton">Login</button>
+                                        <div class="loginbutton" id="loginbtn" onclick="signIn()">Login</div>
                                     </div>
 
                                     <div class="logincontainer" >
                                         <button type="button" onclick="document.getElementById('id01').style.display='none'" id="cancelbtn" class="loginbutton">Cancel</button>
                                         <span class="psw"><a href="#">Forgot Password?</a></span>
-                                        <span class="login"> Not a member? <a href="SignUp.html">Sign Up</a></span>
+                                        <span class="login"> Not a member? <a href="SignIn.html">Sign Up</a></span>
                                     </div>
                                 </form>
                             </div> 
@@ -310,14 +318,14 @@
                 <li>About</li>
             </div>
         </footer>
-        <!-- The core Firebase JS SDK is always required and must be listed first -->
+        <!-- The core Firebase JS SDK is always required and must be listed first
 <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-app.js"></script>
 
-<!-- TODO: Add SDKs for Firebase products that you want to use
+TODO: Add SDKs for Firebase products that you want to use
      https://firebase.google.com/docs/web/setup#available-libraries -->
-<script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-analytics.js"></script>
+<!-- <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-analytics.js"></script> -->
 
-<script>
+<!-- <script>
   // Your web app's Firebase configuration
   // For Firebase JS SDK v7.20.0 and later, measurementId is optional
   var firebaseConfig = {
@@ -334,7 +342,7 @@
   firebase.initializeApp(firebaseConfig);
   firebase.analytics();
   console.log(firebase.database());
-</script>
+</script> -->
 
     </body>
 </html>
