adding items to cart now adds item to list within user in firebase, does not yet work for saved items

--- a/src/product.html
+++ b/src/product.html
@@ -20,7 +20,7 @@
             let locator = getProductLocator();
             
             var ref = database.ref('items').orderByChild('locator').equalTo(locator);
-            console.log(ref);
+            console.log('r', ref);
             ref.once('value')
             .then((snapshot) => {
                 let product = snapshot.val();   
