--- a/src/Cart.html
+++ b/src/Cart.html
@@ -8,13 +8,13 @@
     </head>
     <body>
         <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-database.js"></script>
-    <!-- TODO: Add SDKs for Firebase products that you want to use
-     https://firebase.google.com/docs/web/setup#available-libraries -->
-    <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-analytics.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-auth.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-storage.js"></script>
-    <script src="databasescripts.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-database.js"></script>
+        <!-- TODO: Add SDKs for Firebase products that you want to use
+        https://firebase.google.com/docs/web/setup#available-libraries -->
+        <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-analytics.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-auth.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-storage.js"></script>
+        <script src="databasescripts.js"></script>
         <nav>
             <div class="mobile-nav">
                 <div class="dropdown">
@@ -49,7 +49,29 @@
                 <div id = "nav-bar-right">
                     <ul>
                         <li><a href=#>SEARCH</a></li>
-                        <li><a href=#>PROFILE</a></li>
+                        <li><button class="modalbtn" id="profile" onclick="document.getElementById('id01').style.display='block'" >LOGIN</button></li> 
+                            <div id="id01" class="modal">
+                                <form class= "modal-content animate" action="/action_page.php">
+                                    <div class="logincontainer" width="auto">
+                                        <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Modal">&times;</span>
+
+                                        <h1 id="LogIn">LOGIN</h1>
+                                        <label for="uname"><b>Email</b></label>
+                                        <input type="email" placeholder="Enter Email" id="semail" name="uname" required>
+
+                                        <label for="psw"><b>Password</b></label>
+                                        <input type="password" placeholder="Enter Password" id="spassword" name="psw" required>
+
+                                        <div class="loginbutton" id="loginbtn" onclick="signIn()">Login</div>
+                                    </div>
+
+                                <div class="logincontainer" >
+                                    <button type="button" onclick="document.getElementById('id01').style.display='none'" id="cancelbtn" class="loginbutton">Cancel</button>
+                                    <span class="psw"><a href="#">Forgot Password?</a></span>
+                                    <span class="login"> Not a member? <a href="SignIn.html">Sign Up</a></span>
+                                </div>
+                            </form>
+                            </div> 
                         <li><a href=saved.html>SAVED</a></li>
                         <li id = "cart"><a href=Cart.html>CART</a></li>
                     </ul>
@@ -62,6 +84,7 @@
             <h1>CART</h1>
         </div>
         <div id= "cartContent">
+            <!--
             <li id= "Items">
                 <hr>
                 <a href=#>X</a>
@@ -85,8 +108,8 @@
                 <h2 id="Total">TOTAL</h2>
                 <h2 id="Total">$ 138.07</h2>
                 <a href="#" id="Checkout">CHECKOUT</a> 
-                <!--Will eventually link to the checkout page or paypal API-->
-            </li>
+                <!--Will eventually link to the checkout page or paypal API--
+            </li>-->
         </div>
         <hr>
         <footer>
@@ -108,7 +131,7 @@
             <div id = "footer-right">
                 <li><a href = #>FAQs</a></li>
                 <li><a href = #>Contact</a></li>
-                <li><a href = #>About</a></li>
+                <li><a href = # onclick = displayCart()>About</a></li>
             </div>
         </footer>
 
