--- a/src/ProfilePage.html
+++ b/src/ProfilePage.html
@@ -1,13 +1,6 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>ThreadCore User Profile Page</title>
-        <link rel="stylesheet" type="text/css" href="style.css">
-        <script src="script.js"></script>
-        <script src="jquery-3.5.1.min.js"></script>
-        <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Roboto:wght@100;300;500&family=Syne+Tactile&display=swap" rel="stylesheet">
-    </head>
-    <body>
         <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-app.js"></script>
         <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-database.js"></script>
         <!-- TODO: Add SDKs for Firebase products that you want to use
@@ -16,6 +9,14 @@
         <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-auth.js"></script>
         <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-storage.js"></script>
         <script src="databasescripts.js"></script>
+        <title>ThreadCore User Profile Page</title>
+        <link rel="stylesheet" type="text/css" href="style.css">
+        <script src="script.js"></script>
+        <script src="jquery-3.5.1.min.js"></script>
+        <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Roboto:wght@100;300;500&family=Syne+Tactile&display=swap" rel="stylesheet">
+    </head>
+    <body>
+        
         <nav>
             <div class="mobile-nav">
                 <div class="dropdown">
@@ -77,6 +78,7 @@
             <input type="password" placeholder="***************"/>
             <br>
             <button>Edit Profile</button>
+            <button onclick="signOut()">Log Out</button>
         </div>
         <hr>
         
