--- a/src/ProfilePage.html
+++ b/src/ProfilePage.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title>Profile</title>
         <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-app.js"></script>
         <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-database.js"></script>
         <!-- TODO: Add SDKs for Firebase products that you want to use
@@ -9,7 +10,6 @@
         <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-auth.js"></script>
         <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-storage.js"></script>
         <script src="databasescripts.js"></script>
-        <title>ThreadCore User Profile Page</title>
         <link rel="stylesheet" type="text/css" href="style.css">
         <script src="script.js"></script>
         <script src="jquery-3.5.1.min.js"></script>
