profile info shows up

--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,11 @@
         <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-auth.js"></script>
         <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-storage.js"></script>
         <script src="databasescripts.js"></script>
+        <script> 
+            addEventListener('DOMContentLoaded', (event) => {
+                console.log('The DOM is fully loaded.');
+                authStateListener();
+            });</script>
         <nav>
             <div class="mobile-nav">
                 <div class="dropdown">
