--- a/src/ProfilePage.html
+++ b/src/ProfilePage.html
@@ -16,7 +16,11 @@
         <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Roboto:wght@100;300;500&family=Syne+Tactile&display=swap" rel="stylesheet">
     </head>
     <body>
-        
+        <script> 
+        addEventListener('DOMContentLoaded', (event) => {
+            console.log('The DOM is fully loaded.');
+            authStateListener();
+        });</script>
         <nav>
             <div class="mobile-nav">
                 <div class="dropdown">
@@ -51,7 +55,30 @@
                 <div id = "nav-bar-right">
                     <ul>
                         <li><a href=#>SEARCH</a></li>
-                        <li><a href=#>PROFILE</a></li>
+                        <li><button class="modalbtn" id="profile" onclick="document.getElementById('id01').style.display='block'" >LOGIN</button></li> 
+                            <div id="id01" class="modal">
+                            
+                                <form class= "modal-content animate" action="/action_page.php">
+                                    <div class="logincontainer" width="auto">
+                                        <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Modal">&times;</span>
+
+                                        <h1 id="LogIn">LOGIN</h1>
+                                        <label for="uname"><b>Email</b></label>
+                                        <input type="email" placeholder="Enter Email" id="semail" name="uname" required>
+
+                                        <label for="psw"><b>Password</b></label>
+                                        <input type="password" placeholder="Enter Password" id="spassword" name="psw" required>
+
+                                        <div class="loginbutton" id="loginbtn" onclick="signIn()">Login</div>
+                                    </div>
+
+                                    <div class="logincontainer" >
+                                        <button type="button" onclick="document.getElementById('id01').style.display='none'" id="cancelbtn" class="loginbutton">Cancel</button>
+                                        <span class="psw"><a href="#">Forgot Password?</a></span>
+                                        <span class="login"> Not a member? <a href="SignIn.html">Sign Up</a></span>
+                                    </div>
+                                </form>
+                            </div> 
                         <li><a href=saved.html>SAVED</a></li>
                         <li id = "cart"><a href=Cart.html>CART</a></li>
                     </ul>
@@ -72,10 +99,10 @@
             <p><a href="">Settings</a></p>
         </div>
         <div id="ProfileLogIn">
-            <p id="userEmail">Email</p>
-            <input type="email" placeholder="firstnamelastname@email.com"/>
-            <p id="userPassword">Password</p>
-            <input type="password" placeholder="***************"/>
+            <p>Email</p>
+            <input id="userEmail" type="email" placeholder="firstnamelastname@email.com" disabled/>
+            <p>Password</p>
+            <input id="userPassword" type="password" placeholder="***************" disabled/>
             <br>
             <button>Edit Profile</button>
             <button onclick="signOut()">Log Out</button>
