--- a/src/saved.html
+++ b/src/saved.html
@@ -65,6 +65,7 @@
 
         <div id = "saved-items-container">
             <div id = "saved-items-main">
+                <!--
                 <div class = "saved-item">
                     <a href=# id = "remove-button">X</a>
                     <a href=product.html onclick="saveCurrentItem(this)">
@@ -77,7 +78,7 @@
                             <p>$38</p>
                         </div>
                     </a>
-                </div>
+                </div>-->
             </div>
         </div>
         
@@ -101,7 +102,7 @@
                 <div id = "footer-right">
                     <li><a href = #>FAQs</a></li>
                     <li><a href = #>Contacts</a></li>
-                    <li><a href = #>About</a></li>
+                    <li><a href = # onclick = displaySavedItems()>About</a></li>
                 </div>
             </footer>
     </body>
