--- a/src/Brands.html
+++ b/src/Brands.html
@@ -1,13 +1,23 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="viewport" content="width=device-width, initial-scale=1"/>
         <title>Brands</title>
         <link rel="stylesheet" type="text/css" href="style.css">
-        <script src="script.js"></script>
-        <!--<script src="databasescripts.js"></script>-->
+        <script src="jquery-3.5.1.min.js"></script>
+        <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Roboto:wght@100;300;500&family=Syne+Tactile&display=swap" rel="stylesheet">
     </head>
     <body>
+                         <!-- The core Firebase JS SDK is always required and must be listed first -->
+    <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-database.js"></script>
+    <!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+    <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-analytics.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-storage.js"></script>
+    <script src="databasescripts.js"></script>
+    <script src="script.js"></script>
         <nav>
             <div class="mobile-nav">
                 <div class="dropdown">
@@ -24,7 +34,7 @@
                 <img id = "mobile-logo" src="logo.jpg" alt="Thread Core">
                 <button class="cartbtn">CART</button>
             </div>
-            <script src="databasescripts.js"></script>
+            
             <div class="full-nav">
                 <div id = "nav-bar-left">
                     <ul>
@@ -209,7 +219,7 @@
                     <td class="Alphabet" id="C">C</td>
                     <td>
                         <p>CONVERSE</p>
-                        <a href = "CherryLABP.html"><p>CHERRY LA</p></a>
+                        <button id=BrandProfile onclick="getBrandRef('one_cherryla')">CHERRY LA</button>
                     </td>
                     <td>
                         <p>COMMON PROJECTS</p>
@@ -235,9 +245,9 @@
             <div id = "footer-left">
                 <p>Follow Us</p>
                 <div id = "follow-icons">
-                    <p></p>
-                    <p></p>
-                    <p></p>
+                    <img id="facebooklogo">
+                    <img id="twitterlogo">
+                    <img id="instagramlogo">
                 </div>
             </div>
             <div id = "footer-middle">
