--- a/src/Brands.html
+++ b/src/Brands.html
@@ -187,7 +187,7 @@
                     <td class="Alphabet" id="A">A</td>
                     <td>
                         <p>A.P.C.</p>
-                        <p>ACNE STUDIOS</p>
+                        <a href="BrandProfile.html"><button id="BrandInfo" onclick="getMeToBrandProfile('&quot;3&quot;')">ACNE STUDIOS</button></a>
                         <P>ADER ERROR</P>
                         <p>ASICS</p>
                     </td>
@@ -219,7 +219,7 @@
                     <td class="Alphabet" id="C">C</td>
                     <td>
                         <p>CONVERSE</p>
-                        <button id=BrandProfile onclick="getBrandRef('one_cherryla')">CHERRY LA</button>
+                        <a href="BrandProfile.html"><button id="BrandInfo" name="one" onclick="getMeToBrandProfile('&quot;1&quot;')">CHERRY LA</button></a>
                     </td>
                     <td>
                         <p>COMMON PROJECTS</p>
@@ -235,6 +235,195 @@
                     </td>
                     <td>
                         <p>DICKIES</p>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="Alphabet">E</td>
+                    <td>
+                        <p>ELEVEN PARIS</p>
+                    </td>
+                    <td>
+                        <p>EYTYS</p>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="Alphabet">F</td>
+                    <td>
+                        <p>FARFETCH</p>
+                    </td>
+                    <td>
+                        <a href="BrandProfile.html"><button id="BrandInfo" onclick="getMeToBrandProfile('&quot;2&quot;')">FEAR OF GOD</button></a>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="Alphabet">G</td>
+                    <td>
+                        <p>GOLDEN GOOSE</p>
+                    </td>
+                    <td>
+                        <p>GOLF WANG</p>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="Alphabet">G</td>
+                    <td>
+                        <p>HELMUT LANG</p>
+                    </td>
+                    <td>
+                        <p>HUMAN MADE</p>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="Alphabet">I</td>
+                    <td>
+                        <p>I LOVE UGLY</p>
+                    </td>
+                    <td>
+                        <p>IISE</p>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="Alphabet">J</td>
+                    <td>
+                        <p>JUICE</p>
+                    </td>
+                    <td>
+                        <p>JUUN.J</p>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="Alphabet">K</td>
+                    <td>
+                        <p>K-WAY</p>
+                    </td>
+                    <td>
+                        <p>KENZO</p>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="Alphabet">L</td>
+                    <td>
+                        <p>LOUIS VUITTON</p>
+                    </td>
+                    <td>
+                        <p>LVMH</p>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="Alphabet">M</td>
+                    <td>
+                        <p>MAISON MARGIELA</p>
+                    </td>
+                    <td>
+                        <p>MSGM</p>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="Alphabet">N</td>
+                    <td>
+                        <p>NAMACHECKO</p>
+                    </td>
+                    <td>
+                        <p>NIKE</p>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="Alphabet">O</td>
+                    <td>
+                        <p>OBEY</p>
+                    </td>
+                    <td>
+                        <p>OFF WHITE</p>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="Alphabet">P</td>
+                    <td>
+                        <p>P.A.M</p>
+                    </td>
+                    <td>
+                        <p>PRADA</p>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="Alphabet">Q</td>
+                    <td>
+                        <p>QASIMI</p>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="Alphabet">R</td>
+                    <td>
+                        <p>RAG & BONES</p>
+                    </td>
+                    <td>
+                        <p>READYMADE</p>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="Alphabet">S</td>
+                    <td>
+                        <p>SAINT LAURENT</p>
+                    </td>
+                    <td>
+                        <p>STUSSY</p>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="Alphabet">T</td>
+                    <td>
+                        <p>TAKAHIROMIYASHITA THESOLOIST.</p>
+                    </td>
+                    <td>
+                        <p>THISISNEVERTHAT</p>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="Alphabet">U</td>
+                    <td>
+                        <p>UMBRO</p>
+                    </td>
+                    <td>
+                        <p>UNIQLO</p>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="Alphabet">V</td>
+                    <td>
+                        <p>VANS</p>
+                    </td>
+                    <td>
+                        <p>VETEMENTS</p>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="Alphabet">W</td>
+                    <td>
+                        <p>WALTER VAN BEIRENDONCK</p>
+                    </td>
+                    <td>
+                        <p>WOOYOUNGMI</p>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="Alphabet">X</td>
+                    <td>
+                        <p>X-LARGE</p>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="Alphabet">Y</td>
+                    <td>
+                        <p>YANG LI</p>
+                    </td>
+                    <td>
+                        <p>YEEZY</p>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="Alphabet">Z</td>
+                    <td>
+                        <p>ZARA</p>
                     </td>
                 </tr>
             </table>
