--- a/src/Brands.html
+++ b/src/Brands.html
@@ -18,6 +18,11 @@
     <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-storage.js"></script>
     <script src="databasescripts.js"></script>
     <script src="script.js"></script>
+    <script> 
+        addEventListener('DOMContentLoaded', (event) => {
+            console.log('The DOM is fully loaded.');
+            authStateListener();
+        });</script>
         <nav>
             <div class="mobile-nav">
                 <div class="dropdown">
