updated index, the footers, added FAQ and about

--- a/src/Brands.html
+++ b/src/Brands.html
@@ -197,7 +197,7 @@
                         <p>ASICS</p>
                     </td>
                     <td>
-                        <p>ADDIDAS ORIGINALS</p>
+                        <p>ADIDAS ORIGINALS</p>
                         <p>ALEXANDER MCQUEEN</p>
                         <p>ALEXANDER WANG</p>
                     </td>
@@ -270,7 +270,7 @@
                     </td>
                 </tr>
                 <tr>
-                    <td class="Alphabet">G</td>
+                    <td class="Alphabet">H</td>
                     <td>
                         <p>HELMUT LANG</p>
                     </td>
@@ -452,9 +452,9 @@
                 </div>
             </div>
             <div id = "footer-right">
-                <li><a href = #>FAQs</a></li>
+                <li><a href="faq.html">FAQs</a></li>
                 <li><a href = #>Contacts</a></li>
-                <li><a href = #>About</a></li>
+                <li><a href = "about.html">About</a></li>
             </div>
         </footer>
 
