--- a/src/Cart.html
+++ b/src/Cart.html
@@ -135,9 +135,9 @@
                 </div>
             </div>
             <div id = "footer-right">
-                <li><a href = #>FAQs</a></li>
+                <li><a href = "faq.html">FAQs</a></li>
                 <li><a href = #>Contact</a></li>
-                <li><a href = # onclick = displayCart()>About</a></li>
+                <li><a href = "about.html" onclick = displayCart()>About</a></li>
             </div>
         </footer>
     </body>
