--- a/src/SignUp.html
+++ b/src/SignUp.html
@@ -96,9 +96,9 @@
             </div>
         </div>
         <div id = "footer-right">
-            <li><a href="">FAQs</a></li>
+            <li><a href="faq.html">FAQs</a></li>
             <li><a href="">Contact</a></li>
-            <li><a href="">About</a></li>
+            <li><a href="about.html">About</a></li>
         </div>
     </footer>
    
