--- a/src/drop.html
+++ b/src/drop.html
@@ -304,9 +304,9 @@
                     </div>
                 </div>
                 <div id = "footer-right">
-                    <li><a href = #>FAQs</a></li>
+                    <li><a href="faq.html">FAQs</a></li>
                     <li><a href = #>Contacts</a></li>
-                    <li><a href = #>About</a></li>
+                    <li><a href = "about.html">About</a></li>
                 </div>
             </footer>
     </body>
