--- a/src/saved.html
+++ b/src/saved.html
@@ -100,9 +100,9 @@
                     </div>
                 </div>
                 <div id = "footer-right">
-                    <li><a href = #>FAQs</a></li>
+                    <li><a href="faq.html">FAQs</a></li>
                     <li><a href = #>Contacts</a></li>
-                    <li><a href = # onclick = displaySavedItems()>About</a></li>
+                    <li><a href = "about.html" onclick = displaySavedItems()>About</a></li>
                 </div>
             </footer>
     </body>
