Added images for three brand pages, and linked them on brand page

--- a/src/Brands.html
+++ b/src/Brands.html
@@ -192,13 +192,13 @@
                     <td class="Alphabet" id="A">A</td>
                     <td>
                         <p>A.P.C.</p>
-                        <a href="BrandProfile.html"><button id="BrandInfo" onclick="getMeToBrandProfile('&quot;3&quot;')">ACNE STUDIOS</button></a>
-                        <P>ADER ERROR</P>
+                        <a href="BrandProfile.html"><button id="BrandInfo" onclick="getMeToBrandProfile('&quot;3&quot;')">ACNE STUDIOS</button></a> <p></p>
+                        <a href="BrandProfile.html"><button id="BrandInfo" onclick="getMeToBrandProfile('&quot;5&quot;')">ADER ERROR</button></a>
                         <p>ASICS</p>
                     </td>
                     <td>
                         <p>ADDIDAS ORIGINALS</p>
-                        <p>ALEXANDER MCQUEEN</p>
+                        <a href="BrandProfile.html"><button id="BrandInfo" onclick="getMeToBrandProfile('&quot;6&quot;')">ALEXANDER MCQUEEN</button></a>
                         <p>ALEXANDER WANG</p>
                     </td>
                     <td>
@@ -217,7 +217,7 @@
                         <p>BOTTEGA VENETA</p>
                     </td>
                     <td>
-                        <p>BURBERRY</p>
+                        <a href="BrandProfile.html"><button id="BrandInfo" onclick="getMeToBrandProfile('&quot;4&quot;')">BURBERRY</button></a>
                     </td>
                 </tr>
                 <tr>
