--- a/src/saved.html
+++ b/src/saved.html
@@ -25,7 +25,30 @@
                         <a href="calendar.html">CALENDAR</a>
                         <a href="#">DROPS</a>
                         <a href=inStock.html>IN STOCK</a>
-                        <a href=#>PROFILE</a>
+                        <li><button class="modalbtn" id="profile" onclick="document.getElementById('id01').style.display='block'" >LOGIN</button></li> 
+                            <div id="id01" class="modal">
+                            
+                                <form class= "modal-content animate" action="/action_page.php">
+                                    <div class="logincontainer" width="auto">
+                                        <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Modal">&times;</span>
+
+                                        <h1 id="LogIn">LOGIN</h1>
+                                        <label for="uname"><b>Email</b></label>
+                                        <input type="email" placeholder="Enter Email" id="semail" name="uname" required>
+
+                                        <label for="psw"><b>Password</b></label>
+                                        <input type="password" placeholder="Enter Password" id="spassword" name="psw" required>
+
+                                        <div class="loginbutton" id="loginbtn" onclick="signIn()">Login</div>
+                                    </div>
+
+                                    <div class="logincontainer" >
+                                        <button type="button" onclick="document.getElementById('id01').style.display='none'" id="cancelbtn" class="loginbutton">Cancel</button>
+                                        <span class="psw"><a href="#">Forgot Password?</a></span>
+                                        <span class="login"> Not a member? <a href="SignIn.html">Sign Up</a></span>
+                                    </div>
+                                </form>
+                            </div> 
                         <a href=#>SAVED</a>
                     </div>
                 </div>
@@ -50,7 +73,30 @@
                 <div id = "nav-bar-right">
                     <ul>
                         <li><a href=#>SEARCH</a></li>
-                        <li><a href=#>PROFILE</a></li>
+                        <li><button class="modalbtn" id="profile" onclick="document.getElementById('id01').style.display='block'" >LOGIN</button></li> 
+                            <div id="id01" class="modal">
+                            
+                                <form class= "modal-content animate" action="/action_page.php">
+                                    <div class="logincontainer" width="auto">
+                                        <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Modal">&times;</span>
+
+                                        <h1 id="LogIn">LOGIN</h1>
+                                        <label for="uname"><b>Email</b></label>
+                                        <input type="email" placeholder="Enter Email" id="semail" name="uname" required>
+
+                                        <label for="psw"><b>Password</b></label>
+                                        <input type="password" placeholder="Enter Password" id="spassword" name="psw" required>
+
+                                        <div class="loginbutton" id="loginbtn" onclick="signIn()">Login</div>
+                                    </div>
+
+                                    <div class="logincontainer" >
+                                        <button type="button" onclick="document.getElementById('id01').style.display='none'" id="cancelbtn" class="loginbutton">Cancel</button>
+                                        <span class="psw"><a href="#">Forgot Password?</a></span>
+                                        <span class="login"> Not a member? <a href="SignIn.html">Sign Up</a></span>
+                                    </div>
+                                </form>
+                            </div> 
                         <li><a href=saved.html>SAVED</a></li>
                         <li id = "cart"><a href=Cart.html>CART</a></li>
                     </ul>
@@ -101,7 +147,7 @@
                 </div>
                 <div id = "footer-right">
                     <li><a href="faq.html">FAQs</a></li>
-                    <li><a href = #>Contacts</a></li>
+                    <li><a href = #>Contact</a></li>
                     <li><a href = "about.html" onclick = displaySavedItems()>About</a></li>
                 </div>
             </footer>
