Added a drop down for the DROPS in navigation bar on all the pages. Drop page is now stored on database

--- a/src/CherryLABP.html
+++ b/src/CherryLABP.html
@@ -57,10 +57,10 @@
                     </ul>
                 </div>
             </div>
-        </nav>
+        </nav>   
         <div id = "title2">
             <br>
-            <h1 style = "text-align:right">Cherry LA</h1>
+            <h1>Cherry LA</h1>
         </div>
         <div class= "flex-container">
             <div class = "pictureContainers">
@@ -69,8 +69,8 @@
             <!-- <div style="border-left:1px solid #000;height:200px">  -->
             <div class = "text">
                 <br><br><br><br><br><br>
-                <h2>Cherry is an American clothing brand founded and based out of Los Angeles, CA.
-                <p>Using innovative cut & sew styles with tasteful yet provocative graphics, <br> Cherry puts 
+                <h2>Cherry is an American clothing brand founded and based out of Los Angeles, CA. <br>
+                <br>Using innovative cut & sew styles with tasteful yet provocative graphics, <br> Cherry puts 
                 a modern twist on classic styles to outfit those who think <br> differently and 
                 confident in doing so.</p>
                 <p> To wear Cherry is to celebrate those who forever in pursuit of their <br> wildest and 
