--- a/src/ProfilePage.html
+++ b/src/ProfilePage.html
@@ -43,7 +43,12 @@
                     <ul>
                         <li><a href=Brands.html>BRANDS</a></li>
                         <li><a href=calendar.html>CALENDAR</a></li>
-                        <li><a href=#>DROPS</a></li>
+                        <div class= "dropdown">
+                            <li><button onclick="myFunction () " class= "dropbtn">DROPS</button></li>
+                                <div id= "myDropdown" class="dropdown-content">
+                                    <a href="drop.html">THE SEVENTH COLLECTION</a>
+                                </div>
+                        </div>
                         <li><a href=inStock.html>INSTOCK</a></li>
                     </ul>
                 </div>
