--- a/src/calendar.html
+++ b/src/calendar.html
@@ -38,7 +38,12 @@
                     <ul>
                         <li><a href=Brands.html>BRANDS</a></li>
                         <li><a href=calendar.html>CALENDAR</a></li>
-                        <li><a href=#>DROPS</a></li>
+                        <div class= "dropdown">
+                            <li><button onclick="myFunction () " class= "dropbtn">DROPS</button></li>
+                                <div id= "myDropdown" class="dropdown-content">
+                                    <a href="drop.html">THE SEVENTH COLLECTION</a>
+                                </div>
+                        </div>
                         <li><a href=inStock.html>INSTOCK</a></li>
                     </ul>
                 </div>
@@ -150,7 +155,7 @@
                         <h1>06</h1>
                         <h2>Fear Of God</h2>
                         <div id = event-button>
-                            <button type="button">SHOP NOW</button>
+                            <a href= drop.html><button type="button">SHOP NOW</button></a>
                         </div>
                     </div>
                     <div class = calendar-day>
