images for wang

--- a/src/Brands.html
+++ b/src/Brands.html
@@ -204,9 +204,9 @@
                     <td>
 
                         <p>ADIDAS ORIGINALS</p>
-                        <a href="BrandProfile.html"><button id="BrandInfo" onclick="getMeToBrandProfile('&quot;6&quot;')">ALEXANDER MCQUEEN</button></a>
+                        <a href="BrandProfile.html"><button id="BrandInfo" onclick="getMeToBrandProfile('&quot;6&quot;')">ALEXANDER MCQUEEN</button></a> <p></p>
 
-                        <p>ALEXANDER WANG</p>
+                        <a href="BrandProfile.html"><button id="BrandInfo" onclick="getMeToBrandProfile('&quot;7&quot;')">ALEXANDER WANG</button></a>
                     </td>
                     <td>
                         <p>ALEXANDER WANG.T</p>
