fixed issue with faq dropdown

--- a/src/faq.html
+++ b/src/faq.html
@@ -96,20 +96,20 @@
         <br>
         <br>
         <button class = "FAQaccordian">Does it cost money to subsribe to Thread Core?</button>
-        <div class = "show">
+        <div class = "showFAQ">
             <p>No, it does not cost any money to have an account with Thread Core.</p>
         </div>
         <button class = "FAQaccordian">How often do drops occur?</button>
-        <div class = "show">
+        <div class = "showFAQ">
             <p>This is entirely depends on the brands we colloborate with.  However, we average 3 drops per month.</p>
         </div>
         <button class = "FAQaccordian">Do you ever restock collections?</button>
-        <div class = "show">
+        <div class = "showFAQ">
             <p>No, the drops are often very exclusive and sell out quickly. Mmake sure to keep track of drops and be ready to order.
             </p>
         </div>
         <button class = "FAQaccordian">When was Thread Core started?</button>
-        <div class = "show">
+        <div class = "showFAQ">
             <p>September of 2020
             </p>
            
