Fixed Sign Up Linking issue

--- a/src/BrandProfile.html
+++ b/src/BrandProfile.html
@@ -75,7 +75,7 @@
                                     <div class="logincontainer" >
                                         <button type="button" onclick="document.getElementById('id01').style.display='none'" id="cancelbtn" class="loginbutton">Cancel</button>
                                         <span class="psw"><a href="#">Forgot Password?</a></span>
-                                        <span class="login"> Not a member? <a href="SignIn.html">Sign Up</a></span>
+                                        <span class="login"> Not a member? <a href="SignUp.html">Sign Up</a></span>
                                     </div>
                                 </form>
                             </div> 
