--- a/src/Cart.html
+++ b/src/Cart.html
@@ -80,7 +80,7 @@
                                 <div class="logincontainer" >
                                     <button type="button" onclick="document.getElementById('id01').style.display='none'" id="cancelbtn" class="loginbutton">Cancel</button>
                                     <span class="psw"><a href="#">Forgot Password?</a></span>
-                                    <span class="login"> Not a member? <a href="SignIn.html">Sign Up</a></span>
+                                    <span class="login"> Not a member? <a href="SignUp.html">Sign Up</a></span>
                                 </div>
                             </form>
                             </div> 
@@ -119,7 +119,7 @@
                 <h2 id="Total">TOTAL</h2>
                 <h2 id="Total">$ 138.07</h2>
                 <a href="#" id="Checkout">CHECKOUT</a> 
-                <!--Will eventually link to the checkout page or paypal API--
+                Will eventually link to the checkout page or paypal API--
             </li>-->
         </div>
         <hr>
