--- a/src/SignUp.html
+++ b/src/SignUp.html
@@ -60,7 +60,7 @@
                 <ul>
                     <li><a href=#>SEARCH</a></li>
                     <li><a href=#>PROFILE</a></li>
-                    <li><a href=#>SAVED</a></li>
+                    <li><a href="saved.html">SAVED</a></li>
                     <li id = "cart"><a href=Cart.html>CART</a></li>
                 </ul>
             </div>
