Added mobile logo to pull from storage on all pages

--- a/src/ProfilePage.html
+++ b/src/ProfilePage.html
@@ -34,7 +34,7 @@
                         <a href=saved.html>SAVED</a>
                     </div>
                 </div>
-                <img id = "mobile-logo" src="logo.jpg" alt="Thread Core">
+                <img id = "mobile-logo">
                 <button class="cartbtn">CART</button>
             </div>
 
