--- a/src/SignUp.html
+++ b/src/SignUp.html
@@ -33,7 +33,7 @@
                     <a href=#>SAVED</a>
                 </div>
             </div>
-            <img id = "mobile-logo" src="logo.jpg" alt="Thread Core">
+            <img id = "mobile-logo">
             <button class="cartbtn">CART</button>
         </div>
 
