--- a/src/product.html
+++ b/src/product.html
@@ -10,6 +10,7 @@
         <!-- The core Firebase JS SDK is always required and must be listed first -->
         <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-app.js"></script>
         <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-database.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-storage.js"></script>
         <!-- TODO: Add SDKs for Firebase products that you want to use
         https://firebase.google.com/docs/web/setup#available-libraries -->
         <script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-analytics.js"></script>
@@ -45,7 +46,7 @@
                         <a href=saved.html>SAVED</a>
                     </div>
                 </div>
-                <img id = "mobile-logo" src="logo.jpg" alt="Thread Core">
+                <img id = "mobile-logo" alt="Thread Core">
                 <button class="cartbtn">CART</button>
             </div>
 
@@ -65,7 +66,7 @@
                 </div>
                 <div id = "logo">
                     <a href = "index.html">
-                        <img id="mylogo" src="logo.jpg">
+                        <img id="mylogo">
                     </a>
                 </div>
                 <div id = "nav-bar-right">
