--- a/src/saved.html
+++ b/src/saved.html
@@ -52,7 +52,7 @@
                         <a href=#>SAVED</a>
                     </div>
                 </div>
-                <img id = "mobile-logo" src="logo.jpg" alt="Thread Core">
+                <img id = "mobile-logo">
                 <button class="cartbtn">CART</button>
             </div>
 
