--- a/src/BrandProfile.html
+++ b/src/BrandProfile.html
@@ -30,7 +30,7 @@
                         <a href=saved.html>SAVED</a>
                     </div>
                 </div>
-                <img id = "mobile-logo" src="logo.jpg" alt="Thread Core">
+                <img id = "mobile-logo">
                 <button class="cartbtn">CART</button>
             </div>
             <div class="full-nav">
