--- a/src/inStock.html
+++ b/src/inStock.html
@@ -40,7 +40,7 @@
                         <a href=saved.html>SAVED</a>
                     </div>
                 </div>
-                <img id = "mobile-logo" src="logo.jpg" alt="Thread Core">
+                <img id = "mobile-logo">
                 <button class="cartbtn">CART</button>
             </div>
 
