--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,7 @@
 
                     </div>
                 </div>
-                <img id = "mobile-logo" src="logo.jpg" alt="Thread Core">
+                <img id = "mobile-logo">
                 <button class="cartbtn">CART</button>
             </div>
             <div class="full-nav">
