finds total price for paypal

--- a/src/checkoutButton.html
+++ b/src/checkoutButton.html
@@ -36,7 +36,7 @@
     <span class="pclose">&times;</span>
     <!-- Set up a container element for the button -->
     <div id="paypal-button-container"></div>
-    <div id= ><input id="amount" type="number" value="100"></div>
+    <div id= "amount-div"><input id="amount" type="number" value="100"></div>
 
     <!-- Include the PayPal JavaScript SDK -->
     <script src="https://www.paypal.com/sdk/js?client-id=AQTTDsVRM8ONa_BT1FLNV9rKpu8mn0sUbpRmTADWcVU3oTYfEPN96roiC9mW3_lcXVOo_U8HNbhDRIbM&currency=USD"></script>
