--- a/src/index.html
+++ b/src/index.html
@@ -202,7 +202,7 @@
                 <hr>
                 <br>
                 <div id= "instock">IN STOCK NOW</div>
-                 <div class = "flex-container">
+                 <div class = "flex-containerB">
                     <a href="#" class="previous round">&#8249;</a>
                     <a href="#">
                         <div class="inStockContainers">
